Removing Light Mode & Adding in Header/Profile Images

--- a/do-not-click.html
+++ b/do-not-click.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Resume | Portfolio</title>
+  <title>Do Not Click | Portfolio</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="assets/css/variables.css">
@@ -24,9 +24,9 @@
       <div class="toplinks">
         <a class="nav-link" href="index.html"><i class="bi bi-book"></i>Overview</a>
         <a class="nav-link" href="projects.html"><i class="bi bi-folder2-open"></i>Projects</a>
-        <a class="nav-link active" href="resume.html"><i class="bi bi-file-earmark-person"></i>Resume</a>
+        <a class="nav-link" href="resume.html"><i class="bi bi-file-earmark-person"></i>Resume</a>
         <a class="nav-link" href="hobbies.html"><i class="bi bi-journal-richtext"></i>Blog</a>
-        <a class="nav-link nav-link-danger" href="do-not-click.html">Do Not Click</a>
+        <a class="nav-link nav-link-danger active" href="do-not-click.html">Do Not Click</a>
       </div>
     </div>
   </nav>
@@ -36,34 +36,22 @@
       <div class="panels-container">
         <section class="panel panel-col-mid" style="flex: 1;">
           <div class="panel-header">
-            <h2>Resume</h2>
+            <h2>you don't listen do you.....</h2>
           </div>
-          <div class="panel-body resume-panel-body">
-            <div class="resume-frame-wrap">
-              <iframe
-                class="resume-pdf-frame"
-                title="Resume PDF"
-                src="assets/files/resume.pdf#toolbar=0&navpanes=0&view=FitH">
-              </iframe>
+          <div class="panel-body">
+         
+            <div style="margin-top: 16px; display: flex; justify-content: center;">
+              <img
+                src="assets/img/dance-vibing.gif"
+                alt="Dancing celebration gif"
+                style="display: block; max-width: 560px; width: 100%; border-radius: 10px; border: 1px solid var(--border);"
+              />
             </div>
           </div>
         </section>
       </div>
     </div>
   </main>
-
-  <footer class="site-footer">
-    <div class="footer-inner">
-      <div class="footer-left">&copy; 2026 Your Name. All rights reserved.</div>
-      <div class="footer-right">
-        <a href="#">Privacy</a>
-        <a href="#">Terms</a>
-        <a href="https://github.com/yourusername" target="_blank">GitHub</a>
-        <span class="footer-dot">&middot;</span>
-        <span>Built with HTML &amp; CSS</span>
-      </div>
-    </div>
-  </footer>
 
   <script src="assets/js/main.js"></script>
 </body>
