--- a/hobbies.html
+++ b/hobbies.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="assets/css/responsive.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
 </head>
-<body>
+<body class="dark">
   <nav class="topbar">
     <div class="topbar-inner">
       <a class="brand" href="index.html">
@@ -26,7 +26,7 @@
         <a class="nav-link" href="projects.html"><i class="bi bi-folder2-open"></i>Projects</a>
         <a class="nav-link" href="resume.html"><i class="bi bi-file-earmark-person"></i>Resume</a>
         <a class="nav-link active" href="hobbies.html"><i class="bi bi-journal-richtext"></i>Blog</a>
-        <button class="theme-btn" id="themeToggle" type="button" aria-label="Toggle theme"><i class="bi bi-moon-stars-fill"></i></button>
+        <a class="nav-link nav-link-danger" href="do-not-click.html">Do Not Click</a>
       </div>
     </div>
   </nav>
